# check-diff

./: .gitignore  README.md  main.py  output.txt  pyproject.toml
