[project]
name = "check-diff"
version = "0.1.0"
description = "Row-by-row Excel diff checker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "tqdm>=4.66.0",
]

[project.scripts]
basicCheck = "main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["main.py"]
